# calc

./: .coverage  Pipfile  README.md  calc.py  requirements.txt  setup.cfg
calc/: README.md  basic.py  handler.py  keyboard.py  manage.py  memory.py  power.py  schema.sql  screen.py  symbolic.py
calc/mngr/: log_table.py  operation_table.py  table.py
src/calc_Brailu.egg-info/: PKG-INFO  SOURCES.txt
src/calc_brunitto.egg-info/: PKG-INFO  SOURCES.txt
test/: test_basic.py  test_handler.py
