[metadata]
name = calc-Brailu
version = 0.1.0
author = Ailon Antonio
author_email = ailon_antonio1@gmail.com
description = A simple calculator written in Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brailu/calc
project_urls =
    Bug Tracker = https://github.com/brailu/calc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    sympy

[options.packages.find]
where = src
